--- a/styling/events_page.css
+++ b/styling/events_page.css
@@ -1,12 +1,7 @@
 .main-content-events {
     backdrop-filter: blur(4px);
-    display: flex;
-    flex-direction: column;
     flex-grow: 1;
-    /* justify-content: center; */
-    /* align-items: center; */
 }
-
 
 .head-title {
     justify-content: center;
@@ -30,12 +25,11 @@
 }
 
 .event-container {
-    background-color: rgba(192, 177, 117, 0.5);
+    background-color: rgba(221, 203, 132, 0.7);
     display: flex;
     flex-direction: column;
     gap: 24px;
     padding: 50px;
-    /* background-color: rgba(220, 182, 11, 0.9); */
 }
 
 .event-image-container{
@@ -52,7 +46,7 @@
 .event-date{
     background-color: #ad055b;
     border-radius: 15px;
-    color: var(--main-font-color);
+    color: var(--website-color-beige);
     font-weight: bold;
     height:60px;
     left: 20px;
@@ -70,6 +64,7 @@
 span {
     font-weight: bold;
 }
+
 .read-more-button {
     background: none;
     border: none;
@@ -96,5 +91,4 @@ span {
         font-size: 1.7rem;
         text-align: center;
     }
-
 }
