--- a/styling/global.css
+++ b/styling/global.css
@@ -1,17 +1,19 @@
 :root {
-    --main-font-color: #FFF5E1;
     --font-family: "Funnel Sans", Arial, Helvetica, sans-serif;
     --header-color: rgba(0, 0, 0, 0.4);
+    --letter-spacing: 2px;
     --menu-mobile-font-size: 0.9rem;
+    --website-color-beige: #FFF5E1;
+    --website-color-pink: #bd4e84;
+    --website-color-grey: #383636;
 }
 
 * {
-    box-sizing: border-box
+    box-sizing: border-box;
 }
 
 html {
     height: 100vh;
-    scroll-behavior: smooth;
 }
 
 body {
@@ -34,7 +36,7 @@ body {
 .header-content {
     align-items: center;
     background-color: var(--header-color);
-    color: var(--main-font-color);
+    color: var(--website-color-beige);
     display: flex;
     padding: 15px;
     width: 100%;
@@ -65,9 +67,9 @@ body {
 }
 
 .search-box::placeholder {
-    color: var(--main-font-color);
+    color: var(--website-color-beige);
     font-weight: bold;
-    letter-spacing: 2px;
+    letter-spacing: var(--letter-spacing);
  }
  
 .search-form:hover input {
@@ -77,7 +79,7 @@ body {
 .search-form input {
     background: transparent;
     border: none;
-    color: var(--main-font-color);
+    color: var(--website-color-beige);
     font-weight: 500;
     outline: none;
     transition: ease-in 0.8s;
@@ -85,7 +87,7 @@ body {
 }
 
 .search-form a .fa {
-    color: var(--main-font-color);
+    color: var(--website-color-beige);
     font-size: 1rem;
 }
 
@@ -109,15 +111,15 @@ body {
 
 .navigation-menu-items {
     display: flex;
+    flex: 0 1 100%;
     justify-content: space-around;
     letter-spacing: 3px;
     list-style-type: none;
     padding: 0;
-    flex: 0 1 100%;
 }
 
 .nav-menu-button a {
-    color: var(--main-font-color);
+    color: var(--website-color-beige);
     cursor: pointer;
     font-size: 1rem;
     font-weight: bold;
@@ -126,7 +128,7 @@ body {
 }
 
 .nav-menu-button a:hover {
-    color: #bd4e84;
+    color: var(--website-color-pink);
     font-size: 1.2rem;
     font-weight: bold;
     transition: ease 1s;
@@ -136,7 +138,6 @@ body {
     background-color: rgba(255, 165, 0, 0.3);
     border-radius: 30px;
     border: none;
-    /* color: #de0a71; */
     font-weight: bold;
     padding: 15px 18px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
@@ -145,7 +146,7 @@ body {
 .hero {
     align-items: center;
     background-color: rgba(0, 0, 0, 0.3);
-    color: var(--main-font-color);
+    color: var(--website-color-beige);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -167,10 +168,10 @@ body {
 }
 
 .hero-join-button {
-    background-color: rgba(189, 78, 132, 0.9);
+    background-color: #bd4e84e6;
     border: none;
     border-radius: 10px;
-    color: var(--main-font-color);
+    color: var(--website-color-beige);
     cursor: pointer;
     font-weight: 600;
     letter-spacing: 3px;
@@ -181,13 +182,13 @@ body {
 }
 
 .hero-join-button:hover {
-    color: #bd4e84;
-    background-color: var(--main-font-color);
+    color: var(--website-color-pink);
+    background-color: var(--website-color-beige);
 }
 
 .hero-join-button:active {
     background-color: #d70b66;
-    color: var(--main-font-color);
+    color: var(--website-color-beige);
 }
 
 .main {
@@ -204,9 +205,12 @@ body {
 
 .footer-content { 
     align-items: center;
-    color: var(--main-font-color);
+    color: var(--website-color-beige);
     display: flex;
+    font-family: var(--font-family);
+    font-size: 0.9rem;
     justify-content: space-between;
+    letter-spacing: var(--letter-spacing);
     padding: 40px;
     width: 100%;  
 }
@@ -215,7 +219,6 @@ body {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    letter-spacing: 2px;
     width: 50%;
 }
 
@@ -227,7 +230,6 @@ body {
 }
 
 .follow-us {
-    letter-spacing: 2px;
     padding-right: 10px;
 }
 
@@ -236,14 +238,11 @@ body {
 }
 
 .social-links a{
-    text-decoration: none;
-    
+    text-decoration: none; 
 }
 
 .social-icon {
     width: 40px;
-    /* makes the spacing wider with the below */
-    /* margin: 0 10px; */
 }
 
 @media (min-width: 340px) and (max-width: 1024px) {
@@ -251,11 +250,6 @@ body {
     .header-content {
         flex-direction: column;
     }
-
-     /* .navigation-menu-items{
-        width: 100%;
-        justify-content: space-around;
-    } */
 
     .nav-menu-button a{
         font-size: var(--menu-mobile-font-size);
@@ -266,7 +260,6 @@ body {
     }
 
     .search-form-mobile {
-        /* order: 2; */
         background-color: #bd4e84cc;
         border-radius: 30px;
         display: flex;
@@ -277,28 +270,28 @@ body {
     .search-input-mobile {
         background: transparent;
         border: none;
-        color: var(---main-font-color);
+        color: var(--website-color-beige);
         flex-grow: 1;
         outline: none;
-        padding: 0.5em 0.25em 0.5em 1em;
+        padding: 5px 10px;
     }
 
     .search-button-mobile {
         background: transparent;
         border: none;
         outline: none;
-        padding: 0.5em 0.75em 0.5em 0.5em;
+        padding: 5px 10px;
     }
 
     .search-input-mobile::placeholder {
-        color: var(--main-font-color);
+        color: var(--website-color-beige);
         font-weight: 600;
-        letter-spacing: 2px;
+        letter-spacing: var(--letter-spacing);
         opacity: 0.7; 
     }
 
     .search-button-mobile i{
-        color: var(--main-font-color);
+        color: var(--website-color-beige);
         font-size: 1.1rem;
         opacity: 0.7;
     }
@@ -336,7 +329,6 @@ body {
 
     .hero p {
         text-align: center;
-        /* padding-left: 10px; */
     }
 
     .footer-content{
