--- a/styling/global.css
+++ b/styling/global.css
@@ -17,7 +17,8 @@ html {
 }
 
 body {
-    background-image: url("/images/audience_dark.jpg");
+    margin: 0;
+    background-image: url("../images/audience_dark.jpg");
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
@@ -237,8 +238,8 @@ body {
     width: 40px;
 }
 
-.social-links a{
-    text-decoration: none; 
+.social-icons-container a{
+    text-decoration: none;
 }
 
 .social-icon {
